Enhance Jupyter Spark Master Docker setup with comprehensive updates
- Updated README.md to provide detailed project overview, quick start guide, and enhanced usage instructions.
- Modified docker-compose.yaml to improve service restart policy, added health checks, and enhanced environment variable management.
- Improved driver Dockerfile by adding python3-venv and optimizing package installations.
- Enhanced spark-builder Dockerfile for efficient package installations and faster Spark builds.
- Updated worker Dockerfile to include python3-venv and streamline package installations.
- Created .env.example for environment configuration with security and performance tuning options.
- Added GitHub Actions update management scripts and workflows for automated action version checks and updates.
- Introduced security policy documentation to outline supported versions and vulnerability reporting procedures.
- Developed a development helper script for managing the Jupyter Spark environment.
- Implemented a script to check for outdated GitHub Actions versions used in workflows.
- Added .gitignore to exclude unnecessary files and directories from version control.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,31 @@
-version: '3.7'
+version: '3.8'
 
 services:
   jupyter:
     image: bjornjorgensen/spark-driver:latest
-    restart: 'no'
+    restart: unless-stopped
     volumes:
       - ./test_notebooks:/home/jovyan/notebooks
+      # Optional: Mount local data directory
+      - ./data:/home/jovyan/data
     ports:
       - "8888:8888"
-      - "4040:4040"
+      - "4040:4040"  # Spark UI
+      - "4041:4041"  # Additional Spark UI port
     environment:
-      JUPYTER_TOKEN: "Password"
+      # Security: Use environment file or override this
+      JUPYTER_TOKEN: "${JUPYTER_TOKEN:-Password}"
+      # Performance: Set JVM options
+      SPARK_DRIVER_MEMORY: "${SPARK_DRIVER_MEMORY:-2g}"
+      SPARK_EXECUTOR_MEMORY: "${SPARK_EXECUTOR_MEMORY:-2g}"
+      # Development: Enable Jupyter lab extensions
+      JUPYTER_ENABLE_LAB: "yes"
+    # Optional: Add health check
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8888/api"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
+    # Security: Run as non-root
+    user: "${UID:-1000}:${GID:-1000}"
